# rust_blackjack_api

./: .gitignore  README.md
crates/blackjack-api/: config.toml
crates/blackjack-api/src/: auth.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  rate_limiter.rs  websocket.rs
crates/blackjack-api/tests/: api_tests.rs
crates/blackjack-core/: Cargo.toml
crates/blackjack-core/src/: lib.rs  password.rs  validation.rs
crates/blackjack-core/tests/: integration_tests.rs
crates/blackjack-service/: Cargo.toml
crates/blackjack-service/migrations/: 20250101000000_initial_schema.sql
crates/blackjack-service/src/: lib.rs
crates/blackjack-service/tests/: service_tests.rs
docs/: DEALER_IMPLEMENTATION.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE.md  M7_COMPLETE.md  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  PHASE2_QUICK_REFERENCE.md  PHASE2_ROADMAP.md  PLANEJAMENTO_AUTH_CREATE_GAME.md  PRD.md  QUICK_REFERENCE.md  SECURITY.md  next-steps.md
docs/postman/: API_TESTING_INDEX.md  ARCHITECTURE.md  Blackjack_API.postman_collection.json  Blackjack_Player1.postman_environment.json  Blackjack_Player2.postman_environment.json  COLLECTION_UPDATE_M7_PHASE1.md  CURL_EXAMPLES.md  IMPLEMENTATION_STATUS.md  M7_CHANGES.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  api_tests.http  complete_game_flow.http  simple_test.ps1  temp_collection.json  test_api.ps1
rust_blackjack/: Cargo.toml  README.md
rust_blackjack/docs/: API_REFERENCE.md  PRD.md  SECURITY.md
rust_blackjack/frontend/: README.md  package.json  tsconfig.json
(+2 files in other folders)
