[package]
name = "rust_blackjack"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/blackjack-api",
    "crates/blackjack-cli",
    "crates/blackjack-core",
    "crates/blackjack-service",
    "frontend",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"