[package]
name = "blackjack-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
