[package]
name = "blackjack-service"
version = "0.1.0"
edition = "2024"

[dependencies]
blackjack-core = { path = "../blackjack-core" }
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Future dependencies (commented for Phase 1)
# sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
